manifests/base/static-cv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-cv
  labels:
    app: static-cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-cv
  template:
    metadata:
      labels:
        app: static-cv
    spec:
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: nginx
          image: theadzik/static-cv:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: "TCP"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
      securityContext:
        runAsUser: 10003
        runAsGroup: 20003
        fsGroup: 20003
      volumes:
        - name: tmp
          emptyDir: {}
