manifests/base/static-cv/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-cv
  name: static-cv-http
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: static-cv
  type: ClusterIP
