manifests/base/static-cv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-cv
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  tls:
    - hosts:
        - zmuda.pro
      secretName: static-cv-tls
  rules:
    - host: zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-cv-http
                port:
                  number: 8080
