manifests/base/static-cv/nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: static-cv-nwp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              type: ingress
